# numpy-space

./: README.md  pyproject.toml
numpy_space/: space.py
tests/: test_space.py
