[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numpy-space"
version = "0.1.0"
description = "A simple and intuitive extension of NumPy for vector space operations."
authors = [
    { name="Ayumu Suzuki"}
]
dependencies = [
    "numpy"
]

[tool.setuptools]
packages = ["numpy_space"]
